--- a/app/src/main/res/layout/activity_patient_edit.xml
+++ b/app/src/main/res/layout/activity_patient_edit.xml
@@ -74,7 +74,6 @@
         android:background="@drawable/input"
         android:backgroundTintMode="add"
         android:ems="10"
-        android:hint="@string/phone"
         android:inputType="phone"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
@@ -95,6 +94,7 @@
         android:background="@drawable/input"
         android:backgroundTintMode="add"
         android:ems="10"
+        android:enabled="false"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:paddingStart="10dp"
@@ -131,7 +131,6 @@
         android:background="@drawable/input"
         android:backgroundTintMode="add"
         android:ems="10"
-        android:hint="Medical specialty"
         android:inputType="text"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
@@ -151,7 +150,6 @@
         android:background="@drawable/input"
         android:backgroundTintMode="add"
         android:ems="10"
-        android:hint="Clinic Address"
         android:inputType="text"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
@@ -171,7 +169,6 @@
         android:background="@drawable/input"
         android:backgroundTintMode="add"
         android:ems="10"
-        android:hint="Available time"
         android:inputType="text"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
@@ -191,7 +188,6 @@
         android:background="@drawable/input"
         android:backgroundTintMode="add"
         android:ems="10"
-        android:hint="Other"
         android:inputType="text"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
