--- a/app/src/main/res/layout/activity_header.xml
+++ b/app/src/main/res/layout/activity_header.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:id="@+id/linearLayout3"
         android:layout_width="0dp"
-        android:layout_height="180dp"
+        android:layout_height="220dp"
         android:background="@color/color3"
         android:orientation="vertical"
         android:padding="20dp"
@@ -28,22 +28,24 @@
 
             />
 
-        <TextView
+        <EditText
             android:id="@+id/user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="User Name"
+            android:hint="User Name"
             android:textColor="@color/color2"
+            android:textColorHint="@color/black"
             android:textSize="18sp"
             android:textStyle="bold"
 
             />
 
-        <TextView
+        <EditText
             android:id="@+id/user_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Email"
+            android:hint="Email"
+            android:textColorHint="@color/black"
             android:textColor="@android:color/darker_gray"
             android:textSize="14sp"
             android:textStyle="bold"/>
