--- a/app/src/main/res/layout/activity_eyes_doc2.xml
+++ b/app/src/main/res/layout/activity_eyes_doc2.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/eyesback"
-    tools:context=".eyes_doc2">
+    tools:context=".eyes.eyes_doc2">
 
     <ImageView
         android:id="@+id/imageView5"
@@ -29,7 +29,7 @@
         android:layout_marginTop="93dp"
         android:foregroundGravity="center"
         android:gravity="center"
-        android:text="Dr. Rasha Moussa"
+        android:text="@string/dr_rasha_moussa"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -45,9 +45,7 @@
         android:layout_marginTop="26dp"
         android:layout_marginEnd="-165dp"
         android:layout_toStartOf="@+id/imageView5"
-        android:text="Consultant Cataract Surgeon / MD Ophthalmology.
-Fellow of the Royal College of Surgeons of Glasgow.
-Harvard Teaching Training Fellowship."
+        android:text="@string/consultant_cataract_surgeon_md_ophthalmology_fellow_of_the_royal_college_of_surgeons_of_glasgow_harvard_teaching_training_fellowship"
         android:textColor="@color/gray"
         android:textSize="16sp"
         android:transitionName="desctransaction2" />
@@ -90,7 +88,7 @@ Harvard Teaching Training Fellowship."
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView8"
-        android:text="250 EGP"
+        android:text="@string/_250_egp"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
@@ -106,7 +104,7 @@ Harvard Teaching Training Fellowship."
         android:layout_marginTop="40dp"
         android:layout_marginEnd="17dp"
         android:layout_toEndOf="@+id/imageView7"
-        android:text="25 Mohy El-Din Abou El Ezz Street - first floor , cairo"
+        android:text="@string/_25_mohy_el_din_abou_el_ezz_street_first_floor_cairo"
         android:textColor="@color/black"
         android:textStyle="normal" />
 
@@ -118,7 +116,7 @@ Harvard Teaching Training Fellowship."
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView"
-        android:text="01211033637"
+        android:text="@string/_01211033637"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
