--- a/app/src/main/res/layout/activity_eyes_doc4.xml
+++ b/app/src/main/res/layout/activity_eyes_doc4.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/eyesback"
-    tools:context=".eyes_doc4">
+    tools:context=".eyes.eyes_doc4">
 
     <ImageView
         android:id="@+id/imageView5"
@@ -29,7 +29,7 @@
         android:layout_marginTop="93dp"
         android:foregroundGravity="center"
         android:gravity="center"
-        android:text="Dr.Youmna Amr"
+        android:text="@string/dr_youmna_amr"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -45,7 +45,7 @@
         android:layout_marginTop="26dp"
         android:layout_marginEnd="-160dp"
         android:layout_toStartOf="@+id/imageView5"
-        android:text="MD Ophthalmology - Consultant of plastic surgery of the eyelids, tear ducts and eye orbits"
+        android:text="@string/md_ophthalmology_consultant_of_plastic_surgery_of_the_eyelids_tear_ducts_and_eye_orbits"
         android:textColor="@color/gray"
         android:textSize="16sp"
         android:transitionName="desctransaction4" />
@@ -88,7 +88,7 @@
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView8"
-        android:text="200 EGP"
+        android:text="@string/_200_egp"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
@@ -104,8 +104,7 @@
         android:layout_marginTop="35dp"
         android:layout_marginEnd="19dp"
         android:layout_toEndOf="@+id/imageView7"
-        android:text="Al Haram Eye Center.
-Al-Ahram Street in front of the European Hotel Al-Haram"
+        android:text="@string/al_haram_eye_center_al_ahram_street_in_front_of_the_european_hotel_al_haram"
         android:textColor="@color/black"
         android:textStyle="normal" />
 
@@ -117,7 +116,7 @@ Al-Ahram Street in front of the European Hotel Al-Haram"
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView"
-        android:text="01289032090"
+        android:text="@string/_01289032090"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
