--- a/app/src/main/res/layout/activity_eyes_doctors.xml
+++ b/app/src/main/res/layout/activity_eyes_doctors.xml
@@ -78,7 +78,7 @@
                 android:layout_toEndOf="@+id/eyes_doctor1"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:text="Dr. Amr said"
+                android:text="@string/dr_amr_said"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -92,7 +92,7 @@
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="1dp"
                 android:layout_toEndOf="@+id/eyes_doctor1"
-                android:text="Lecturer of ophthalmology and surgery, Faculty of Medicine, Alexandria ..."
+                android:text="@string/lecturer_of_ophthalmology_and_surgery_faculty_of_medicine_alexandria"
                 android:textColor="@color/gray"
                 android:textSize="14sp"
                 android:transitionName="desctransaction" />
@@ -127,7 +127,7 @@
                 android:layout_marginTop="20dp"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:text="Dr. Rasha Moussa "
+                android:text="@string/dr_rasha_moussa"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -143,8 +143,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="5dp"
                 android:layout_toStartOf="@+id/eyes_doctor2"
-                android:text="Consultant Cataract Surgeon / MD Ophthalmology.
-Fellow of the Royal..."
+                android:text="@string/consultant_cataract_surgeon_md_ophthalmology_fellow_of_the_royal"
                 android:textColor="@color/gray"
                 android:textSize="14sp"
                 android:transitionName="desctransaction2" />
@@ -183,7 +182,7 @@ Fellow of the Royal..."
                 android:layout_toEndOf="@+id/eyes_doctor3"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:text="Dr. Amr Hussein"
+                android:text="@string/dr_amr_hussein"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -197,7 +196,7 @@ Fellow of the Royal..."
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="1dp"
                 android:layout_toEndOf="@+id/eyes_doctor3"
-                android:text="Consultant of ophthalmology and LASIK at the International Medical CenterDoctor of ophthalmology  ..."
+                android:text="@string/consultant_of_ophthalmology_and_lasik_at_the_international_medical_centerdoctor_of_ophthalmology"
                 android:textColor="@color/gray"
                 android:textSize="14sp"
                 android:transitionName="desctransaction3" />
@@ -232,7 +231,7 @@ Fellow of the Royal..."
                 android:layout_marginTop="20dp"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:text="Dr. Youmna Amr"
+                android:text="@string/dr_youmna_amr"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -248,7 +247,7 @@ Fellow of the Royal..."
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="5dp"
                 android:layout_toStartOf="@+id/eyes_doctor4"
-                android:text="MD Ophthalmology - Consultant of plastic surgery of the eyelids ..."
+                android:text="@string/md_ophthalmology_consultant_of_plastic_surgery_of_the_eyelids"
                 android:textColor="@color/gray"
                 android:textSize="14sp"
                 android:transitionName="desctransaction4" />
@@ -287,7 +286,7 @@ Fellow of the Royal..."
                 android:layout_toEndOf="@+id/eyes_doctor5"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:text="Dr. Amr Rady"
+                android:text="@string/dr_amr_rady"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -301,7 +300,7 @@ Fellow of the Royal..."
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="1dp"
                 android:layout_toEndOf="@+id/eyes_doctor5"
-                android:text="Instructor of ophthalmology and laser, ophthalmologist specialized in LASIK..."
+                android:text="@string/instructor_of_ophthalmology_and_laser_ophthalmologist_specialized_in_lasik"
                 android:textColor="@color/gray"
                 android:textSize="14sp"
                 android:transitionName="desctransaction5" />
@@ -336,7 +335,7 @@ Fellow of the Royal..."
                 android:layout_marginTop="20dp"
                 android:foregroundGravity="center"
                 android:gravity="center"
-                android:text="Dr. Isis Sayed "
+                android:text="@string/dr_isis_sayed"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -352,7 +351,7 @@ Fellow of the Royal..."
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="5dp"
                 android:layout_toStartOf="@+id/eyes_doctor6"
-                android:text="Ophthalmologist specialized in Adult Eyes, Retinal and Vitreous Surgery, Pediatric ..."
+                android:text="@string/ophthalmologist_specialized_in_adult_eyes_retinal_and_vitreous_surgery_pediatric"
                 android:textColor="@color/gray"
                 android:textSize="14sp"
                 android:transitionName="desctransaction6" />
