--- a/app/src/main/res/layout/activity_skin_menu.xml
+++ b/app/src/main/res/layout/activity_skin_menu.xml
@@ -34,6 +34,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="18dp"
+        android:text="Click on the name of the disease to know some information about it"
+        android:textColor="@color/gray"
+        android:gravity="center"
+        android:textSize="14dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
 
     <Button
         android:id="@+id/con_btn"
@@ -59,6 +73,7 @@
         android:id="@+id/textView25"
         android:layout_width="300dp"
         android:layout_height="350dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/customer_button_home3"
         android:gravity="center"
         android:textColor="@color/black"
@@ -69,7 +84,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <TextView
-        android:id="@+id/textView41"
+        android:id="@+id/actinic_keratosis"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
@@ -81,7 +96,7 @@
         app:layout_constraintTop_toTopOf="@+id/textView25" />
 
     <TextView
-        android:id="@+id/textView43"
+        android:id="@+id/intraepithelial_carcinoma"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -90,10 +105,10 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/textView25"
         app:layout_constraintStart_toStartOf="@+id/textView25"
-        app:layout_constraintTop_toBottomOf="@+id/textView41" />
+        app:layout_constraintTop_toBottomOf="@+id/actinic_keratosis" />
 
     <TextView
-        android:id="@+id/textView44"
+        android:id="@+id/basal_cell_carcinoma"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -102,10 +117,10 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/textView25"
         app:layout_constraintStart_toStartOf="@+id/textView25"
-        app:layout_constraintTop_toBottomOf="@+id/textView43" />
+        app:layout_constraintTop_toBottomOf="@+id/intraepithelial_carcinoma" />
 
     <TextView
-        android:id="@+id/textView45"
+        android:id="@+id/seborrheic_keratosis"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -114,10 +129,10 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/textView25"
         app:layout_constraintStart_toStartOf="@+id/textView25"
-        app:layout_constraintTop_toBottomOf="@+id/textView44" />
+        app:layout_constraintTop_toBottomOf="@+id/basal_cell_carcinoma" />
 
     <TextView
-        android:id="@+id/textView46"
+        android:id="@+id/dermatofibroma"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -126,10 +141,10 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/textView25"
         app:layout_constraintStart_toStartOf="@+id/textView25"
-        app:layout_constraintTop_toBottomOf="@+id/textView45" />
+        app:layout_constraintTop_toBottomOf="@+id/seborrheic_keratosis" />
 
     <TextView
-        android:id="@+id/textView47"
+        android:id="@+id/melanoma"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -138,10 +153,10 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/textView25"
         app:layout_constraintStart_toStartOf="@+id/textView25"
-        app:layout_constraintTop_toBottomOf="@+id/textView46" />
+        app:layout_constraintTop_toBottomOf="@+id/dermatofibroma" />
 
     <TextView
-        android:id="@+id/textView48"
+        android:id="@+id/melanocytic_nevi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -150,5 +165,5 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/textView25"
         app:layout_constraintStart_toStartOf="@+id/textView25"
-        app:layout_constraintTop_toBottomOf="@+id/textView47" />
+        app:layout_constraintTop_toBottomOf="@+id/melanoma" />
 </androidx.constraintlayout.widget.ConstraintLayout>
