--- a/app/src/main/res/layout/activity_basal_cell_carcinoma_info.xml
+++ b/app/src/main/res/layout/activity_basal_cell_carcinoma_info.xml
@@ -29,7 +29,7 @@
         android:layout_marginTop="56dp"
         android:text="@string/basal_cell_carcinoma"
         android:textColor="@color/color2"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -43,9 +43,9 @@
         android:layout_marginTop="18dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:text="@string/skin1_info"
+        android:text="@string/skin3_info"
         android:textColor="@color/gray"
-        android:textSize="16dp"
+        android:textSize="16sp"
         android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -54,8 +54,8 @@
 
     <ImageView
         android:id="@+id/imageView14"
-        android:layout_width="390dp"
-        android:layout_height="350dp"
+        android:layout_width="340dp"
+        android:layout_height="310dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
