--- a/app/src/main/res/layout/activity_intraepithelial_carcinoma_info.xml
+++ b/app/src/main/res/layout/activity_intraepithelial_carcinoma_info.xml
@@ -29,7 +29,7 @@
         android:layout_marginTop="56dp"
         android:text="@string/intraepithelial_carcinoma"
         android:textColor="@color/color2"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -43,9 +43,9 @@
         android:layout_marginTop="18dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:text="@string/skin1_info"
+        android:text="@string/skin2_info"
         android:textColor="@color/gray"
-        android:textSize="16dp"
+        android:textSize="16sp"
         android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
