--- a/app/src/main/res/layout/activity_melanocytic_nevi_info.xml
+++ b/app/src/main/res/layout/activity_melanocytic_nevi_info.xml
@@ -30,7 +30,7 @@
       android:layout_marginTop="56dp"
       android:text="@string/melanocytic_nevi"
       android:textColor="@color/color2"
-      android:textSize="20dp"
+      android:textSize="20sp"
       android:textStyle="bold"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.498"
@@ -44,9 +44,9 @@
       android:layout_marginTop="18dp"
       android:paddingLeft="10dp"
       android:paddingRight="10dp"
-      android:text="@string/skin1_info"
+      android:text="@string/skin7_info"
       android:textColor="@color/gray"
-      android:textSize="16dp"
+      android:textSize="16sp"
       android:gravity="center"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.5"
