--- a/app/src/main/res/layout/activity_skin_menu.xml
+++ b/app/src/main/res/layout/activity_skin_menu.xml
@@ -27,7 +27,7 @@
         android:layout_marginTop="18dp"
         android:text="@string/you_can_upload_a_picture_of_your_skin_and_we_will_n_tell_you_if_you_suffer_from_one_of_these_diseases"
         android:textColor="@color/gray"
-        android:textSize="14dp"
+        android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -39,10 +39,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
-        android:text="Click on the name of the disease to know some information about it"
+        android:text="@string/click_on_the_name_of_the_disease_to_know_some_information_about_it"
         android:textColor="@color/gray"
         android:gravity="center"
-        android:textSize="14dp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
