--- a/app/src/main/res/layout/activity_actinic_keratosis_info.xml
+++ b/app/src/main/res/layout/activity_actinic_keratosis_info.xml
@@ -29,7 +29,7 @@
         android:layout_marginTop="56dp"
         android:text="@string/actinic_keratosis"
         android:textColor="@color/color2"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -45,7 +45,7 @@
         android:paddingRight="10dp"
         android:text="@string/skin1_info"
         android:textColor="@color/gray"
-        android:textSize="16dp"
+        android:textSize="16sp"
         android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
