--- a/app/src/main/res/layout/chat_item_recieved_message.xml
+++ b/app/src/main/res/layout/chat_item_recieved_message.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -23,7 +24,7 @@
         android:layout_marginLeft="4dp"
         android:background="@drawable/background_recieved_message"
         android:padding="15dp"
-        android:textSize="13dp"
+        android:textSize="13sp"
         android:textColor="@color/white"
         app:layout_constraintStart_toEndOf="@id/chat_img"
         app:layout_constraintTop_toTopOf="parent"
@@ -35,8 +36,9 @@
         android:layout_height="wrap_content"
         android:textColor="@color/gray"
         android:layout_marginTop="4dp"
-        android:textSize="10dp"
+        android:textSize="10sp"
         app:layout_constraintStart_toStartOf="@id/textmessage"
-        app:layout_constraintTop_toBottomOf="@id/textmessage"/>
+        app:layout_constraintTop_toBottomOf="@id/textmessage"
+        tools:ignore="SmallSp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
