--- a/app/src/main/res/layout/chat_item_send_message.xml
+++ b/app/src/main/res/layout/chat_item_send_message.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -12,7 +13,7 @@
         android:background="@drawable/background_send_message"
         android:padding="15dp"
         android:textColor="@color/white"
-        android:textSize="13dp"
+        android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_percent="0.8"/>
@@ -23,8 +24,9 @@
         android:layout_height="wrap_content"
         android:textColor="@color/gray"
         android:layout_marginTop="4dp"
-        android:textSize="10dp"
+        android:textSize="10sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textmessage"/>
+        app:layout_constraintTop_toBottomOf="@id/textmessage"
+        tools:ignore="SmallSp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
