--- a/app/src/main/res/layout/successful_skin_screen.xml
+++ b/app/src/main/res/layout/successful_skin_screen.xml
@@ -21,7 +21,7 @@
         android:gravity="center"
         android:text="TextView"
         android:textColor="@color/black"
-        android:textSize="32dp"
+        android:textSize="32sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/guideline_skin1"
         app:layout_constraintEnd_toEndOf="parent"
