--- a/app/src/main/res/layout/activity_dermatofibroma_info.xml
+++ b/app/src/main/res/layout/activity_dermatofibroma_info.xml
@@ -54,7 +54,8 @@
 
     <ImageView
         android:id="@+id/imageView14"
-        android:layout_width="390dp"
+        android:layout_width="370dp"
+        android:paddingRight="20dp"
         android:layout_height="350dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
