--- a/app/src/main/res/layout/menu_header.xml
+++ b/app/src/main/res/layout/menu_header.xml
@@ -1,49 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="180dp"
     android:background="@color/color3"
     android:orientation="vertical">
 
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/pic"
+        android:layout_width="95dp"
+        android:layout_height="95dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="8dp"
+        app:civ_border_color="@color/color2"
+        app:civ_border_width="2dp"
+        android:src="@drawable/logophoto"
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/pic"
-            android:layout_width="81dp"
-            android:layout_height="75dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="15dp"
-            android:src="@drawable/logophoto"
+        />
 
-            />
+    <TextView
+        android:id="@+id/user_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/pic"
+        android:layout_marginStart="15dp"
+        android:hint="User Name"
+        android:textColor="@color/color2"
+        android:textColorHint="@color/black"
+        android:textSize="18sp"
+        android:textStyle="bold"
 
-        <TextView
-            android:id="@+id/user_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="User Name"
-            android:layout_marginStart="15dp"
-            android:textColor="@color/color2"
-            android:textColorHint="@color/black"
-            android:textSize="18sp"
-            android:layout_below="@id/pic"
-            android:textStyle="bold"
-
-            />
+        />
 
     <TextView
         android:id="@+id/user_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/user_name"
+        android:layout_marginStart="15dp"
         android:hint="Email"
         android:textColor="@android:color/darker_gray"
         android:textColorHint="@color/black"
         android:textSize="14sp"
-        android:textStyle="bold"
-        android:layout_marginStart="15dp"
-        android:layout_below="@id/user_name"/>
+        android:textStyle="bold" />
 
 
 
