--- a/app/src/main/res/layout/chat_item_recieved_message.xml
+++ b/app/src/main/res/layout/chat_item_recieved_message.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginTop="8dp"
     android:padding="4dp">
+
     <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/chat_img"
         android:layout_width="25dp"
@@ -23,7 +25,11 @@
         android:layout_marginStart="4dp"
         android:layout_marginLeft="4dp"
         android:background="@drawable/background_recieved_message"
-        android:padding="15dp"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:paddingEnd="16dp"
+        android:paddingStart="14dp"
+        app:layout_constraintWidth_max="wrap"
         android:textSize="13sp"
         android:textColor="@color/white"
         app:layout_constraintStart_toEndOf="@id/chat_img"
