--- a/app/src/main/res/layout/chat_item_send_message.xml
+++ b/app/src/main/res/layout/chat_item_send_message.xml
@@ -2,16 +2,22 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginTop="8dp"
     android:padding="4dp">
     <TextView
         android:id="@+id/textmessage"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/background_send_message"
-        android:padding="15dp"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:paddingEnd="16dp"
+        android:paddingStart="14dp"
+        app:layout_constraintWidth_max="wrap"
+
         android:textColor="@color/white"
         android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
