--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -37,13 +37,18 @@
                     android:title="@string/share"
                     android:icon="@drawable/share"/>
 
+                <item android:id="@+id/nav_rate"
+                    android:title="@string/rate_us"
+                    android:icon="@drawable/star" />
+
                 <item android:id="@+id/nav_logout"
                     android:title="@string/logout"
                     android:icon="@drawable/logout" />
 
-                <item android:id="@+id/nav_rate"
-                    android:title="@string/rate_us"
-                    android:icon="@drawable/star" />
+                <item android:id="@+id/nav_delete"
+                    android:title="@string/delete_account"
+                    android:icon="@drawable/delete"/>
+
             </menu>
         </item>
     </group>
