--- a/app/src/main/res/layout/activity_patient_edit.xml
+++ b/app/src/main/res/layout/activity_patient_edit.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="15dp"
         android:foregroundGravity="center"
         android:src="@drawable/logophoto"
-        app:civ_border_color="@color/color2"
+        app:civ_border_color="@color/white"
         app:civ_border_width="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
