--- a/app/src/main/res/layout/menu_header.xml
+++ b/app/src/main/res/layout/menu_header.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="8dp"
-        app:civ_border_color="@color/color2"
+        app:civ_border_color="@color/white"
         app:civ_border_width="2dp"
         android:src="@drawable/logophoto"
 
