--- a/app/src/main/res/layout/activity_choose_field.xml
+++ b/app/src/main/res/layout/activity_choose_field.xml
@@ -13,16 +13,17 @@
         tools:context=".choose_field">
 
 
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:paddingLeft="40dp"
+            android:paddingTop="50dp"
             android:text="@string/we_have_more_than_field"
             android:textColor="?android:textColorPrimary"
             android:textSize="24dp"
-            android:textStyle="bold"
-            android:paddingTop="50dp"
-            android:paddingLeft="40dp"/>
+            android:textStyle="bold" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -45,16 +46,18 @@
                     android:orientation="vertical"
                     android:gravity="center"
                     android:layout_gravity="center">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/lungs"
+                        android:layout_gravity="center"
                         android:layout_marginTop="10dp"
+                        android:gravity="center"
                         android:paddingBottom="10dp"
-                        android:textSize="24dp"
-                        android:textStyle="bold"
+                        android:text="@string/lungs"
                         android:textColor="@color/black"
-                        android:gravity="center"/>
+                        android:textSize="24dp"
+                        android:textStyle="bold" />
                     <ImageView
                         android:layout_width="380dp"
                         android:layout_height="350dp"
