--- a/app/src/main/res/layout/activity_patient_edit.xml
+++ b/app/src/main/res/layout/activity_patient_edit.xml
@@ -21,6 +21,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ProgressBar
+        android:id="@+id/progrsess_edit"
+        android:layout_width="23dp"
+        android:layout_height="21dp"
+        android:layout_gravity="center"
+        android:indeterminateTint="@color/color2"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/profile_pic"
+        app:layout_constraintEnd_toEndOf="@+id/profile_pic"
+        app:layout_constraintStart_toStartOf="@+id/profile_pic"
+        app:layout_constraintTop_toTopOf="@+id/profile_pic" />
+
 
 
 
