--- a/app/src/main/res/layout/activity_bulging_eyes.xml
+++ b/app/src/main/res/layout/activity_bulging_eyes.xml
@@ -50,7 +50,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/skin_dis1" />
+        app:srcCompat="@drawable/eyes1" />
 
     <TextView
         android:id="@+id/textView6"
