--- a/app/src/main/res/layout/activity_uveitis.xml
+++ b/app/src/main/res/layout/activity_uveitis.xml
@@ -50,7 +50,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/skin_dis1" />
+        app:srcCompat="@drawable/eyes4" />
 
     <TextView
         android:id="@+id/textView6"
@@ -73,7 +73,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/you_are_infected_with_bulging_eyes"
+        android:text="@string/you_have_uveitis"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="20sp"
