--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -94,13 +94,14 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/btnsend"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="4dp"
             android:layout_marginLeft="4dp"
             android:padding="8dp"
             android:src="@drawable/ic_send_24"
-            app:tint="@color/white"/>
+            app:tint="@color/white" />
     </FrameLayout>
 
     <EditText
