--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -29,6 +29,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="46dp"
         android:ellipsize="end"
         android:gravity="center"
         android:maxLines="1"
@@ -114,7 +115,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="12dp"
         android:background="@drawable/background_chat_input"
-        android:text="@string/type_a_message"
+        android:hint="@string/type_a_message"
         android:imeOptions="actionDone"
         android:importantForAutofill="no"
         android:inputType="text"
