--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -24,11 +24,23 @@
         app:layout_constraintBottom_toTopOf="@id/viewusers"
         app:layout_constraintTop_toTopOf="parent"/>
 
+    <com.makeramen.roundedimageview.RoundedImageView
+        android:id="@+id/img_prof2"
+        android:layout_width="40dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="200dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:scaleType="centerCrop"
+        android:background="@drawable/back_icon"
+        app:riv_corner_radius="8dp"/>
+
     <TextView
         android:id="@+id/username"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_marginEnd="46dp"
         android:ellipsize="end"
         android:gravity="center"
@@ -38,7 +50,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/img_back2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/img_back2"
+        app:layout_constraintStart_toEndOf="@+id/img_prof"
         app:layout_constraintTop_toTopOf="@id/img_back2" />
     <View
         android:id="@+id/viewusers"
