--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -50,7 +50,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/img_back2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/img_prof"
+        app:layout_constraintStart_toEndOf="@+id/img_prof2"
         app:layout_constraintTop_toTopOf="@id/img_back2" />
     <View
         android:id="@+id/viewusers"
