--- a/app/src/main/res/layout/activity_patient_edit.xml
+++ b/app/src/main/res/layout/activity_patient_edit.xml
@@ -34,8 +34,6 @@
         app:layout_constraintTop_toTopOf="@+id/profile_pic" />
 
 
-
-
     <ImageView
         android:id="@+id/camera"
         android:layout_width="42dp"
@@ -69,8 +67,8 @@
         android:inputType="textEmailAddress"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
-        android:textColorHint="#ACACAC"
         android:textColor="@color/black"
+        android:textColorHint="#ACACAC"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -125,7 +123,7 @@
         android:id="@+id/txt_reset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="43dp"
+        android:layout_marginTop="30dp"
         android:fontFamily="sans-serif-medium"
         android:text="@string/reset"
         android:textColor="@color/color2"
@@ -224,5 +222,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/txt_reset"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />
+
+    <TextView
+        android:id="@+id/delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="@string/delete_account"
+        android:textColor="@color/color2"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="@+id/txt_reset"
+        app:layout_constraintTop_toBottomOf="@+id/txt_reset" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
